# cookiecutter-cli

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.html  cookiecutter.json  genindex.html  index.html  objects.inv  search.html  searchindex.js  tox.ini
.github/workflows/: main.yml
_sources/: index.rst.txt
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
tests/: conftest.py  test_cookiecutter.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
{{cookiecutter.package_name}}/docs/: click.rst  conf.py  index.rst  install.rst  {{cookiecutter.package_name}}.rst
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
{{cookiecutter.package_name}}/tests/: conftest.py  test_cli.py
