[metadata]
name = {{cookiecutter.package_name}}
version = attr: {{cookiecutter.package_name}}.__version__
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
author = Anders Stendevad
author_email = andst@itu.dk
license = MIT
license_file = LICENCE.txt
license_files =
    LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT LICENSE
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    click

python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.cli:{{cookiecutter.package_name}}

[tox:tox]
envlist = py39
minversion = 3.24.5
isolated_build = True

[testenv]
deps =
    pytest
    pre-commit
commands =
    pre-commit run --all-files
    pytest {posargs}

[testenv:docs]
skipsdist = True
deps =
    sphinx
    sphinx_rtd_theme
commands =
    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
    sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html

[flake8]
max-line-length = 120
per-file-ignores =
    docs/conf.py: F401

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.cfg", "docs"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "docs"
badge-format = "svg"
