[bumpversion]
current_version = 0.0.1

[metadata]
name = {{cookiecutter.package_name}}
version = attr: {{cookiecutter.package_name}}.__version__
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
author = Anders Stendevad
author_email = andersstendevad98@gmail.com
license = MIT
license_file = LICENCE.txt
license_files =
    LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT LICENSE
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    click

python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.cli:{{cookiecutter.package_name}}

[tox:tox]
envlist = {{cookiecutter.package_name}}, lint, test, mypy, docs
minversion = 3.24.5

[testenv]
deps = pytest
package = wheel
wheel_build_env = .pkg

[testenv:lint]
description = Lint
deps =
	pre-commit
commands =
	pre-commit run --all-files

[testenv:test]
description = Run unit tests
commands =
    pytest {posargs}

[testenv:mypy]
description = Run mypy
deps =
    mypy
commands =
    mypy src

[testenv:docs]
description = Create docs
deps =
	sphinx
	sphinx_rtd_theme
	sphinx-click
	myst-parser
commands =
    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
    sphinx-build -n -T -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html

[testenv:bump]
description = Bump version
deps = bump2version
commands =
	bump2version patch --config-file setup.cfg

[testenv:publish]
allowlist_externals =
    git
    bin/touch
    bin/mv
    bin/rm
    bin/cp
    bin/mkdir
deps =
    sphinx
    sphinx_rtd_theme
    sphinx-click
    myst-parser
commands =
    git switch main
    sphinx-build -n -T -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
    mkdir publish_docs
    cp -r docs/_build/html/. publish_docs/
    git switch gh-pages
    git pull
    rm -r src docs
    mv publish_docs/ docs/
    touch docs/.nojekyll
    git add .
    git commit -m "updated docs"
    git push
    git switch main

[flake8]
max-line-length = 120
per-file-ignores =
    docs/conf.py: F401

[bumpversion:file:src/package/__init__.py]
search = {current_version}
replace = {new_version}
